correction of media query, somethngs is not aligning here

--- a/index.css
+++ b/index.css
@@ -80,6 +80,7 @@ body {
         height: 100%;
         margin: 0;
         padding: 0;
+        overflow: hidden;
     }
 
     .container {
@@ -90,12 +91,11 @@ body {
         border-radius: 0;
         display: flex;
         flex-direction: column;
-        row-gap: 5px;
+        row-gap: 3px;
         justify-content: center;
     }  
 
     .container .header {
-        border: 2px solid red;
         flex-direction: column;
         align-items: center;
     }
@@ -114,9 +114,6 @@ body {
         font-size: 1.2em;
     }
 
-    .container .section{
-        border: 2px solid yellow;
-    }
 
     .container .job {
         font-size: 1.2em;
@@ -137,7 +134,6 @@ body {
     }
 
     .footer {
-        border: 2px solid green;
         margin-top: 0px;
     }
 }
